# plinth-plutarch-paper-codes

./: .gitignore  .hlint.yaml  .pre-commit-config.yaml  README.md  cabal.project  error-message-comparison.md  error-patterns.md  flake.nix  fourmolu.yaml  plinth-plutarch-paper-code.cabal
app/: BenchScripts.hs
nix/: outputs.nix  project.nix  shell.nix  utils.nix
src/: Example.hs
src-errormsg/: README.md  collect-errors.sh
src-errormsg-validators/: .gitignore  README.md  run.sh
src-errormsg-validators/E04-DivisionOnIntegers/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E05-BoolForInteger/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E07-WrongField/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E12-MissingAppParens/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E21-WrongPreludeFunction/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E25-InfiniteType/: Plinth.err  Plinth.hs  Plinth.patch  Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E27-UnsupportedGADTs/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg-validators/E29-StageError/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg-validators/E36-IntegerLiteralPattern/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg-validators/E37-MissingPAsDataField/: Plutarch.err  Plutarch.hs  Plutarch.patch
src-errormsg-validators/E38-UnsupportedInt/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg-validators/E39-UnsupportedRangeSyntax/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg-validators/E41-UnsupportedText/: Plinth.err  Plinth.hs  Plinth.patch
src-errormsg/E01-ReturnListNotElement/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E02-SwapArguments/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E03-ElementNotList/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E04-DivisionOnIntegers/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E05-BoolForInteger/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E06-ApplyNonFunction/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E07-WrongField/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E08-MissingEq/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E09-MissingOrd/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E10-MissingDataConstraint/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E11-MissingPatternParens/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E12-MissingAppParens/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E13-InfixConfusion/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E14-FunctionNameTypo/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E15-LowercaseConstructor/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E16-WrongVariable/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E17-MissingBaseCase/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E18-MissingConstructor/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E19-WrongFieldCount/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E20-ListOpConfusion/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E21-WrongPreludeFunction/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E22-EqOnFunction/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E23-WrongPatternOrder/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E24-BrokenRecursion/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E25-InfiniteType/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E26-AmbiguousType/: Plinth.err  Plinth.hs  Plutarch.err  Plutarch.hs
src-errormsg/E27-UnsupportedGADTs/: Plinth.err  Plinth.hs
src-errormsg/E28-UnsupportedEqBase/: Plinth.err  Plinth.hs
src-errormsg/E29-StageError/: Plinth.err  Plinth.hs
src-errormsg/E30-NoInlineUnfolding/: Plinth.hs
src-errormsg/E31-MissingInlinable/: Plinth.hs
src-errormsg/E32-UnsupportedTypeFamilies/: Plinth.err  Plinth.hs
src-errormsg/E33-UseOfShow/: Plinth.err  Plinth.hs
src-errormsg/E34-UseOfIO/: Plinth.err  Plinth.hs
src-errormsg/E35-UseOfString/: Plinth.err  Plinth.hs
src-errormsg/E36-IntegerLiteralPattern/: Plinth.err  Plinth.hs
src-errormsg/E37-MissingPAsDataField/: Plutarch.err  Plutarch.hs
src-errormsg/E38-UnsupportedInt/: Plinth.err  Plinth.hs
src-errormsg/E39-UnsupportedRangeSyntax/: Plinth.err  Plinth.hs
src-errormsg/E40-UnsupportedDouble/: Plinth.err  Plinth.hs
src-errormsg/E41-UnsupportedText/: Plinth.err  Plinth.hs
src/Certifying/Contracts/: Certifying.hs  CertifyingPlinth.hs
src/Constitution/Contracts/: ConstitutionSorted.hs  ConstitutionSortedPlinth.hs
src/Constitution/Types/: ConstitutionConfig.hs
src/Crowdfund/Contracts/: Crowdfund.hs  CrowdfundPlinth.hs
src/Crowdfund/Types/: CrowdfundState.hs
src/Hydra/Contracts/: Head.hs  HeadPlinth.hs
src/Hydra/Types/: HeadState.hs
src/Sample/: Sample.hs  SamplePlinth.hs
src/Settings/Contracts/: Settings.hs  SettingsPlinth.hs
src/Settings/Types/: SettingsState.hs
src/SmartTokens/Contracts/: ProgrammableLogicBase.hs  ProgrammableLogicBasePlinth.hs
src/SmartTokens/Types/: Constants.hs  PTokenDirectory.hs  ProgrammableLogicGlobal.hs  ProtocolParams.hs
src/Vesting/Contracts/: Vesting.hs  VestingPlinth.hs
src/Vesting/Types/: VestingState.hs
src/Voting/Contracts/: Voting.hs  VotingPlinth.hs
test/: Spec.hs
test/Certifying/Test/: Certifying.hs
test/Constitution/Test/: ConstitutionSorted.hs
test/Crowdfund/Test/: Crowdfund.hs
test/Hydra/Test/: Head.hs
utils/: JargonLists.hs  MeasureCodeSize.hs  MeasureErrorJargon.hs  MeasureJargonLevel.hs
(+5 files in other folders)
