cabal-version: 3.4
name:          plinth-plutarch-paper-code
version:       0.1.0.0
synopsis:      Plinth and Plutarch paper codes
license:       BSD-3-Clause
author:        Seungheon Oh <seungheon.oh@iohk.io>
build-type:    Simple

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiWayIf
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wno-unused-packages -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialise -fno-omit-interface-pragmas -Wmissing-export-lists
    -Wmissing-import-lists -Wmissing-deriving-strategies

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules:
    Certifying.Contracts.Certifying
    Certifying.Contracts.CertifyingPlinth
    Constitution.Contracts.ConstitutionSorted
    Constitution.Contracts.ConstitutionSortedPlinth
    Constitution.Types.ConstitutionConfig
    Crowdfund.Contracts.Crowdfund
    Crowdfund.Contracts.CrowdfundPlinth
    Crowdfund.Types.CrowdfundState
    Example
    Hydra.Contracts.Head
    Hydra.Contracts.HeadPlinth
    Hydra.Types.HeadState
    Sample.Sample
    Sample.SamplePlinth
    Settings.Contracts.Settings
    Settings.Contracts.SettingsPlinth
    Settings.Types.SettingsState
    SmartTokens.Contracts.ProgrammableLogicBase
    SmartTokens.Contracts.ProgrammableLogicBasePlinth
    SmartTokens.Types.Constants
    SmartTokens.Types.ProgrammableLogicGlobal
    SmartTokens.Types.ProtocolParams
    SmartTokens.Types.PTokenDirectory
    Vesting.Contracts.Vesting
    Vesting.Contracts.VestingPlinth
    Vesting.Types.VestingState
    Voting.Contracts.Voting
    Voting.Contracts.VotingPlinth

  build-depends:
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text

executable bench-scripts
  import:         base, project-config
  hs-source-dirs: app test
  main-is:        BenchScripts.hs
  ghc-options:
    -threaded -rtsopts -Wno-missing-import-lists
    -Wno-missing-export-lists

  other-modules:
    Certifying.Test.Certifying
    Constitution.Test.ConstitutionSorted
    Crowdfund.Test.Crowdfund
    Hydra.Test.Head
    ProgrammableTokens.Test.ScriptContext.Builder
    Settings.Test.Settings
    Vesting.Test.Vesting
    Voting.Test.Voting

  build-depends:
    , bytestring
    , lens
    , plinth-plutarch-paper-code
    , plutarch
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , serialise
    , tasty
    , tasty-hunit
    , tasty-quickcheck

test-suite conformance-tests
  import:         base, project-config
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:
    -threaded -rtsopts -Wno-missing-import-lists
    -Wno-missing-export-lists

  other-modules:
    Certifying.Test.Certifying
    Constitution.Test.ConstitutionSorted
    Crowdfund.Test.Crowdfund
    Hydra.Test.Head
    ProgrammableTokens.Test.ProgrammableLogicGlobal
    ProgrammableTokens.Test.ScriptContext.Builder
    Settings.Test.Settings
    Vesting.Test.Vesting
    Voting.Test.Voting

  build-depends:
    , bytestring
    , plinth-plutarch-paper-code
    , plutarch
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

executable measure-code-size
  import:         base, project-config
  hs-source-dirs: utils
  main-is:        MeasureCodeSize.hs
  ghc-options:
    -threaded -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missing-deriving-strategies

  build-depends:
    , containers
    , filepath
    , haskell-src-exts
